syntax = "proto3";

package requestsevents;

option go_package = "./proto;requests";

enum EventType {
  EventTypeUnknown = 0;
  EventTypeRequest = 1;
}

message Event {
  Request request = 1;
  EventType type = 3;
}

message Request {
  string user_id = 1; // This is actually the project ID
  string namespace = 2;
  string api_key_id = 3;
  string url = 4;
  string api_name = 5;
  string endpoint_name = 6;
  string price = 7; // how much this request has cost. "free" is a free endpoint. "0" is a paid endpoint that is using free quota
  string project_id = 8;
}


